--- a/blocks/TextCard/package.json
+++ b/blocks/TextCard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "block-text-card",
+  "name": "@miniprogram-materials/block-text-card",
   "version": "0.1.0",
   "description": "intro block",
   "files": [
