--- a/scaffolds/app-js/tsconfig.json
+++ b/scaffolds/app-js/tsconfig.json
@@ -3,15 +3,19 @@
   "buildOnSave": false,
   "compilerOptions": {
     "baseUrl": ".",
+    "outDir": "build",
     "module": "esnext",
     "target": "es6",
     "jsx": "react",
     "moduleResolution": "node",
     "sourceMap": true,
-    "alwaysStrict": true,
+    "allowJs": true,
+    "rootDir": "./",
     "paths": {
       "@/*": ["./src/*"],
       "ice": [".ice/index.ts"]
     }
-  }
+  },
+  "include": ["src/*", ".ice"],
+  "exclude": ["node_modules", "build", "public"]
 }
