--- a/scaffolds/app-ts/package.json
+++ b/scaffolds/app-ts/package.json
@@ -7,7 +7,7 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "ice.js": "^1.7.0"
+    "ice.js": "1.7.0-7"
   },
   "scripts": {
     "start": "icejs start",
@@ -16,7 +16,7 @@
   "scaffoldConfig": {
     "title": "MiniApp - Ts",
     "category": "Basic",
-    "screenshot": "https://img.alicdn.com/tfs/TB1utDfb9slXu8jSZFuXXXg7FXa-746-1322.png",
+    "screenshot": "https://img.alicdn.com/tfs/TB11L00Qrr1gK0jSZFDXXb9yVXa-744-1328.png",
     "name": "MiniApp - Ts"
   },
   "publishConfig": {
