--- a/scaffolds/app-ts/package.json
+++ b/scaffolds/app-ts/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@miniprogram-materials/scaffolds-app-ts",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "React 小程序应用工程，使用 TypeScript。",
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "ice.js": "1.7.0-7"
+    "ice.js": "1.7.0"
   },
   "scripts": {
     "start": "icejs start",
