--- a/scaffolds/todos/package.json
+++ b/scaffolds/todos/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@miniprogram-materials/scaffolds-todos",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "一个使用 React 编写的 Todo List 小程序。",
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "ice.js": "1.7.0-7"
+    "ice.js": "1.7.0"
   },
   "scripts": {
     "start": "icejs start",
