feat: use server to store todos in todos miniapp example

--- a/scaffolds/todos/package.json
+++ b/scaffolds/todos/package.json
@@ -4,10 +4,13 @@
   "description": "一个使用 React 编写的 Todo List 小程序。",
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "universal-request": "^2.2.0"
   },
   "devDependencies": {
-    "ice.js": "1.7.0"
+    "miniapp-history": "^0.1.2",
+    "miniapp-render": "^1.0.1",
+    "ice.js": "^1.7.0"
   },
   "scripts": {
     "start": "icejs start",
